--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             </div>
 
             <div class="box">
-                <i class="fas fa-mobile"></i>
+                <i class="fas fa-code"></i>
                 <h3>Database Integration.</h3>
                 <button class="btn_skill">MongoDB</button>
                 <button class="btn_skill">MySql</button>
@@ -255,7 +255,7 @@
             </div>
 
             <div class="box">
-                <i class="fas fa-mobile"></i>
+                <i class="fas fa-code"></i>
                 <h3>API Integration.</h3>
                 <button class="btn_skill">Node.Js</button>
                 <button class="btn_skill">Express.Js</button>
