--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- custom css file link  -->
     <link rel="stylesheet" href="css/style.css">
-    <link href="images/about-img.jpg" rel="icon">
+    <link href="images/1673718400772.jpg" rel="icon">
 
 </head>
 
