--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
 
              <div class="box">
                 <img src="images/map.webp" alt="">
-                <h3> Nearby Places Map App </h3>
+                <h3> Movie Search Website</h3>
                 <div class="icons">
                     <a href="https://aashish-movies.netlify.app/">View Demo</a>
                     <a href="https://github.com/aashishkumarnayak/aashish-movies-app" target="_blank">View Code</a>
