--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
             </div>
 
              <div class="box">
-                <img src="images/map.webp" alt="">
+                <img src="images/Screenshot (983).png" alt="">
                 <h3> Movie Search Website</h3>
                 <div class="icons">
                     <a href="https://aashish-movies.netlify.app/">View Demo</a>
