--- a/index.html
+++ b/index.html
@@ -364,8 +364,8 @@
                 <img src="images/Screenshot (983).png" alt="">
                 <h3> Movie Search Website</h3>
                 <div class="icons">
-                    <a href="https://aashish-movies.netlify.app/">View Demo</a>
-                    <a href="https://github.com/aashishkumarnayak/aashish-movies-app" target="_blank">View Code</a>
+                    <a href="https://aashish-movies.netlify.app/"  target="_blank">View Demo</a>
+                    <a href="https://github.com/aashishkumarnayak/aashish-movies" target="_blank">View Code</a>
                    
                 </div>
             </div>
