--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <p> <span> country : </span> india </p>
                     </div>
                 </div>
-                <a href="https://drive.google.com/file/d/1DC30MlX-yNgoDU5N4p7_Oxw-wNX2VKHk/view?usp=share_link"
+                <a href="https://drive.google.com/file/d/1R5Qx8cm3C8m1BxTFdwNnwaDczJtTfbw1/view?usp=sharing"
                     target="_blank" class="btn">download CV</a>
                 <a href="#contact" class="btn">hire me</a>
             </div>
