--- a/index.html
+++ b/index.html
@@ -336,13 +336,14 @@
         <div class="box-container">
 
              <div class="box">
-                <img src="images/word counter.png" alt="">
+                <img src="images/mern_ecommerce.png" alt="">
                 <h3>MERN Ecommerce Project</h3>
                 <div class="icons">
                     <a href="https://nayak-online-store.cyclic.cloud/"  target="_blank">View Live</a>
                     <a href="https://github.com/aashishkumarnayak/MERN_Project_Ecommerce" target="_blank" >View Code</a>
                     
                 </div>
+            </div>
             <div class="box">
                 <img src="images/semicolon_.png" alt="">
                 <h3>codidng club</h3>
