--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 
              <div class="box">
                 <img src="images/mern_ecommerce.png" alt="">
-                <h3>MERN Ecommerce Project</h3>
+                <h3>Ecommerce MERN</h3>
                 <div class="icons">
                     <a href="https://nayak-online-store.cyclic.cloud/"  target="_blank">View Live</a>
                     <a href="https://github.com/aashishkumarnayak/MERN_Project_Ecommerce" target="_blank" >View Code</a>
